@@ -1,6 +1,5 @@
 package com.sequenceiq.cloudbreak.cloud.aws;
 
-import java.util.Collections;
 import java.util.List;
 
 import javax.inject.Inject;
@@ -36,7 +35,9 @@ import com.sequenceiq.cloudbreak.cloud.aws.common.AwsPlatformParameters;
 import com.sequenceiq.cloudbreak.cloud.aws.common.AwsPlatformResources;
 import com.sequenceiq.cloudbreak.cloud.aws.common.AwsPublicKeyConnector;
 import com.sequenceiq.cloudbreak.cloud.aws.common.AwsTagValidator;
+import com.sequenceiq.cloudbreak.cloud.aws.common.validator.AwsStorageValidator;
 import com.sequenceiq.cloudbreak.cloud.aws.metadata.AwsNativeMetadataCollector;
+import com.sequenceiq.cloudbreak.cloud.aws.validator.AwsGatewaySubnetMultiAzValidator;
 import com.sequenceiq.cloudbreak.cloud.model.CloudResource;
 import com.sequenceiq.cloudbreak.cloud.model.Platform;
 import com.sequenceiq.cloudbreak.cloud.model.Variant;
@@ -81,10 +82,16 @@ public class AwsNativeConnector implements CloudConnector<List<CloudResource>> {
     private AwsTagValidator awsTagValidator;
 
     @Inject
+    private AwsGatewaySubnetMultiAzValidator awsGatewaySubnetMultiAzValidator;
+
+    @Inject
     private AwsNativeMetadataCollector nativeMetadataCollector;
 
     @Inject
     private AwsNativeResourceConnector awsNativeResourceConnector;
+
+    @Inject
+    private AwsStorageValidator awsStorageValidator;
 
     @Override
     public Authenticator authentication() {
@@ -101,7 +108,7 @@ public class AwsNativeConnector implements CloudConnector<List<CloudResource>> {
         if (ValidatorType.IMAGE.equals(validatorType)) {
             return List.of();
         }
-        return Collections.singletonList(awsTagValidator);
+        return List.of(awsTagValidator, awsGatewaySubnetMultiAzValidator, awsStorageValidator);
     }
 
     @Override
